# testConverter

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.bat
app/: main.py
app/managers/: __init__.py  converter.py
app/router/: __init__.py  converter.py  root.py  websocket.py
app/services/: __init__.py  websocket.py
app/static/css/: main.66dc2d2d.css  main.66dc2d2d.css.map
app/static/js/: main.38024efe.js  main.38024efe.js.map  main.3cd3fd05.js  main.3cd3fd05.js.map
app/templates/: index.html
