[tool.poetry]
name = "testconverter"
version = "0.1.0"
description = ""
authors = ["Sergey <suprun.sergey89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "0.35.0"
pydantic = "2.11.7"
jinja2 = "^3.1.6"
websockets = "^15.0.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
